fix(shared/components/header): add small gap between header items

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,3 +1,7 @@
 .spacer {
   flex: 1 1 auto;
 }
+
+.header {
+  gap: 0.25rem;
+}
